[gd_scene load_steps=4 format=3 uid="uid://ceq8u62gbl5kk"]

[ext_resource type="Script" path="res://Scenes/Character3D.gd" id="1_eppbd"]
[ext_resource type="Script" path="res://Scenes/Splatter.gd" id="1_v8awd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0cw7d"]
radius = 0.25
height = 1.0

[node name="Character4" type="CharacterBody3D" groups=["character", "selectable"]]
collision_layer = 2
script = ExtResource("1_eppbd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_0cw7d")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(240, 240)
render_target_update_mode = 4

[node name="CharacterSprite" type="Node2D" parent="SubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/CharacterSprite"]
light_mask = 2
centered = false

[node name="PointLight2D" type="PointLight2D" parent="SubViewport/CharacterSprite"]
light_mask = 2
offset = Vector2(120, 120)

[node name="Splatter1" type="Sprite2D" parent="SubViewport/CharacterSprite"]
centered = false
offset = Vector2(100, 0)
script = ExtResource("1_v8awd")

[node name="Splatter2" type="Sprite2D" parent="SubViewport/CharacterSprite"]
centered = false
script = ExtResource("1_v8awd")
my_splat_num = 1

[node name="Splatter3" type="Sprite2D" parent="SubViewport/CharacterSprite"]
centered = false
offset = Vector2(20, 10)
script = ExtResource("1_v8awd")
my_splat_num = 2

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
pixel_size = 0.005
billboard = 1
double_sided = false
alpha_cut = 2

[node name="TargetPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[connection signal="input_event" from="." to="." method="_on_Character3D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Character3D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Character3D_mouse_exited"]
